# Voxel-Render

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flamegraph.html
engine/: Cargo.toml
engine/src/: chunk.rs  clock.rs  input.rs  lib.rs  ticket.rs
geom/: Cargo.toml
geom/src/: chunk.rs  lib.rs  util.rs  voxel.rs  world.rs
gfx/: Cargo.toml  build.rs
gfx/src/: buffer.rs  camera.rs  chunk.rs  lib.rs  light.rs  model.rs  state.rs  texture.rs  util.rs
gfx/src/shaders/: colored.frag.dis  light.frag  raybox.vert.dis  shader.frag.spv  shader.vert  shader.vert.spv
src/: chunk_gen.rs  chunk_updater.rs  clock.rs  consts.rs  input.rs  main.rs  shader.rs  texture.rs  voxel_registry.rs  world.rs
src/geom/: chunk.rs  consts.rs  mod.rs  point_cloud.rs  ticket.rs  util.rs  voxel.rs  world.rs
src/geom_old/: mod.rs  point_cloud.rs
src/render/: camera.rs  chunk.rs  chunk_render.rs  light.rs  mod.rs  model.rs  state.rs  texture.rs  uniforms.rs  util.rs
src/shaders/: colored.frag  light.vert  raybox.vert  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  simple.vert  simple.vert.dis
voxel_render/: Cargo.toml
voxel_render/src/: consts.rs  main.rs
