[package]
name = "voxel-render"
version = "0.1.0"
authors = ["Levijatan <aasmunjr@uio.no>"]
edition = "2018"

[dependencies]
nalgebra-glm = "0.8.0"
gl = "0.14.0"
image = "0.23.9"
flame = "0.2.2"
flamer = "0.3"
dashmap = "3.11.10"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[profile.dev.package.voxel-render]
opt-level = 0

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"
