[package]
name = "voxel-render"
version = "0.1.0"
authors = ["Levijatan <aasmunjr@uio.no>"]
edition = "2018"

[dependencies]
arrayvec = "0.5.2"
bitvec = "0.19.4"
nalgebra-glm = "0.9.0"
image = "0.23.11"
winit = "0.23.0"
env_logger = "0.8.1"
log = "0.4"
wgpu = "0.6"
futures = "0.3"
bytemuck = "1.4"
anyhow = "1.0"
thiserror = "1.0.21"
tobj = "2.0"
rayon = "1.5.0"
legion = "0.3.1"
optick = "1.3.4"
optick-attr = "0.3.0"
dashmap = "3.11.10"
generational-arena = "0.2.8"
cached = "0.20.0"
building-blocks = "0.1.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2.0"
glob = "0.3"
rayon = "1.5.0"
shaderc = "0.6"

[profile.dev.package.voxel-render]
opt-level = 0

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"
