[package]
name = "engine"
version = "0.1.0"
authors = ["Levijatan <aasmunjr@uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tobj = "2.0"
wgpu = "0.6.0"
winit = "0.23.0"
legion = "0.3.1"
building-blocks = "0.1.0"
geom = { path = "../geom"}
gfx = { path ="../gfx"}