[package]
name = "geom"
version = "0.1.0"
authors = ["Levijatan <aasmunjr@uio.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.19.4"
building-blocks = "0.1.0"
log = "0.4.11"
anyhow = "1.0"
legion = "0.3.1"
nalgebra-glm = "0.9.0"