[package]
name = "voxel-render"
version = "0.1.0"
authors = ["Levijatan <aasmunjr@uio.no>"]
edition = "2018"

[dependencies]
wgpu = "^0.6"
winit = "^0.23"
anyhow = "^1.0"
legion = "^0.3"
futures = "^0.3"
env_logger = "^0.8"
geom = { path = "../geom"}
engine = { path = "../engine"}
gfx = { path = "../gfx"}
